# brewos

./: .gitignore  CONTRIBUTING.md  ECM_Pico_Firmware_Requirements.md  ESP32_Display_Wiring.md  README.md  SETUP.md  VERSION  version.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/workflows/: build.yml  build_firmware.yml  build_web.yml  ci.yml  deploy.yml  dev-release.yml  pages.yml  release.yml
docs/: README.md  RELEASING.md  index.html
docs/cloud/: Database_Storage.md  Deployment.md  ESP32_Integration.md  Latency_and_Performance.md  Pairing_and_Sharing.md  Push_Notifications.md  README.md
docs/development/: USB_CDC_Re-enable.md
docs/esp32/: ESP32-S3-Development-Board-2-4G-Wifi-Module-for-Arduino-ESP-IDF-ESP32-S3-WROOM-1.avif  Implementation_Plan.md  OTA_Updates.md  README.md  Simulator.md  WiFi_Setup_Page.md
docs/esp32/features/: Eco_Mode.md  Schedules.md
docs/esp32/integrations/: BLE_Scales.md  Brew_By_Weight.md  MQTT.md  Notifications.md  Web_API.md
docs/hardware/: CHANGELOG.md  ESP32_Display_Wiring.md  ESP32_Wiring.md  Engineering_Tasks.md  OTA_SWD_Design_Review.md  README.md  Specification.md  Test_Procedures.md
docs/hardware/schematics/: Component_Reference_Guide.md  Schematic_Reference.md  netlist.csv  schematic_reference.md
docs/hardware/spec/: 01-Overview.md  02-GPIO-Allocation.md  03-Power-Supply.md  04-Outputs.md  05-Analog-Inputs.md  06-Connectors.md  07-BOM.md  08-PCB-Layout.md  09-Safety.md  Silkscreen_Recommendations.md
docs/pico/: Architecture.md  Debugging.md  Environmental_Configuration.md  Implementation_Plan.md  Machine_Configurations.md  Power_Metering.md  Quick_Start.md  README.md  Requirements.md  Versioning.md
docs/pico/features/: Cleaning_Mode_Implementation.md  Error_Handling.md  Shot_Timer_Display.md  Statistics_Feature.md  Water_Management_Implementation.md
docs/shared/: API_Versioning.md  Communication_Protocol.md  Feature_Status_Table.md  README.md
docs/web/: PWA.md  Power_Metering.md  Push_Notifications.md  QUICK_START_PWA.md  README.md  WebSocket_Protocol.md
firmware/: README.md
hardware/: ESP32_Display_Wiring.md
homeassistant/: README.md  hacs.json
homeassistant/custom_components/brewos/: __init__.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  manifest.json  number.py  select.py  sensor.py  strings.json  switch.py
homeassistant/examples/: automations.yaml  dashboard.yaml
homeassistant/lovelace/: brewos-card.js
pages/: getting-started.html  index.html  package-lock.json  package.json  privacy.html  terms.html
pages/src/components/: Header.astro
pages/src/layouts/: BaseLayout.astro
pages/src/pages/: index.astro  partnerships.astro
pages/src/styles/: global.css
scripts/: release.sh
src/: README.md
src/cloud/: .dockerignore  Dockerfile  docker-compose.yml  env.example  eslint.config.js  package-lock.json  package.json
src/cloud/admin/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/cloud/admin/src/: App.tsx  index.css  main.tsx
src/cloud/src/: client-proxy.ts  device-relay.ts  server.ts
src/cloud/src/lib/: database.ts
src/cloud/src/middleware/: admin.ts  auth.ts
src/cloud/src/routes/: admin.ts  auth.ts  devices.ts  push.ts
src/cloud/src/services/: admin.ts  device.ts  push.ts  session.ts
src/cloud/src/types/: sql.js.d.ts
src/esp32/: lv_conf.h  partitions_8MB.csv  platformio.ini  sdkconfig.defaults  update_wifi_setup_header.py  update_wifi_setup_header.sh  watch_wifi_setup.py  wifi_setup_page_dev.html
src/esp32/data/: app.js  index.html  style.css
src/esp32/include/: brew_by_weight.h  cloud_connection.h  config.h  esp32_diagnostics.h  json_buffer_pool.h  log_manager.h  memory_utils.h  mqtt_client.h  msgpack_helper.h  pairing_manager.h  panic_handler.h  pico_protocol_handler.h  pico_swd.h  pico_uart.h  runtime_state.h  web_server.h  wifi_manager.h  wifi_setup_page.h
src/esp32/include/display/: display.h  display_config.h  theme.h
src/esp32/include/notifications/: cloud_notifier.h  notification_manager.h
src/esp32/include/platform/: arduino_impl.h  native_impl.h
src/esp32/include/power_meter/: mqtt_power_meter.h  power_meter.h  power_meter_manager.h
src/esp32/include/scale/: scale_interface.h  scale_manager.h
src/esp32/include/state/: state_manager.h  state_types.h
src/esp32/include/ui/: screen_bbw.h  screen_ota.h  screen_settings.h  ui.h
src/esp32/scripts/: analyze_logs.py  lint_wifi_setup.py  pre_build.py
src/esp32/src/: brew_by_weight.cpp  cloud_connection.cpp  esp32_diagnostics.cpp  json_buffer_pool.cpp  log_manager.cpp  main.cpp  mqtt_client.cpp  msgpack_helper.cpp  pairing_manager.cpp  panic_handler.cpp  pico_protocol_handler.cpp  pico_swd.cpp  pico_uart.cpp  runtime_state.cpp  web_server.cpp  web_server_broadcast.cpp  web_server_ota.cpp  web_server_websocket.cpp  wifi_manager.cpp
src/esp32/src/display/: display.cpp  (+2 more)
src/pico/: CMakeLists.txt
src/pico/examples/: hardware_example.c
src/pico/include/: class_b.h  config.h  config_persistence.h  control_impl.h  diagnostics.h  environmental_config.h  log_forward.h  logging.h  machine_config.h  machine_electrical.h  pcb_config.h  power_meter.h  protocol.h
src/pico/src/: bootloader.c  class_b.c  config_persistence.c  control_common.c  control_heat_exchanger.c  diagnostics.c  gpio_init.c  hardware.c  log_forward.c  logging.c  machine_config.c  main.c  packet_handlers.c  pcb_config.c  power_meter.c  protocol.c  safety.c  sensors.c  state.c
src/pico/test/: CMakeLists.txt  test_class_b.c  test_main.c  test_power_meter.c  test_preinfusion.c  test_protocol.c  test_protocol_advanced.c
src/pico/test/mocks/: mock_hardware.h  mock_protocol.c
src/scripts/: build_firmware.sh  flash_esp32.sh  flash_pico.sh  run_simulator.sh  verify_pr.sh  version.js
src/shared/: protocol_defs.h
src/web/: index.html  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
src/web/.storybook/: preview.tsx
src/web/public/: manifest.json  sw.js  version-manifest.json
src/web/src/: App.tsx  main.tsx
web/: CNAME  index.html
(+174 files in other folders)
